--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -356,6 +356,7 @@
     <Compile Include="Models\Genericas\Venda\ComposicaoDto.cs" />
     <Compile Include="Models\Genericas\Venda\ItemDto.cs" />
     <Compile Include="Models\Obras\Filtro\TipoObrasFiltradas.cs" />
+    <Compile Include="Models\Pedidos\EnviarValidacaoFinanceiro\DadosEntradaDto.cs" />
     <Compile Include="Models\Pedidos\ProdutosPedido\Lista\PermissoesDto.cs" />
     <Compile Include="Models\Obras\Filtro\DadosEntradaDto.cs" />
     <Compile Include="Models\Obras\Filtro\ObraDto.cs" />
@@ -431,6 +432,7 @@
     <Compile Include="Models\Pedidos\ProdutosPedido\CadastroAtualizacao\DadoRealECalculadoDto.cs" />
     <Compile Include="Models\Pedidos\ProdutosPedido\CadastroAtualizacao\ProdutoDto.cs" />
     <Compile Include="Models\Pedidos\ProdutosPedido\Observacao\DadosEntradaDto.cs" />
+    <Compile Include="Models\Pedidos\ValidarDescontoPedido\DescontoDto.cs" />
     <Compile Include="Models\Processos\Filtro\ProcessoDto.cs" />
     <Compile Include="Models\Genericas\Venda\AlturaDto.cs" />
     <Compile Include="Models\Genericas\Venda\AreaDto.cs" />
