#77191 Adequações no WebGlass para a integração com eCutter

--- a/Glass.Data.Test/app.config
+++ b/Glass.Data.Test/app.config
@@ -50,6 +50,10 @@
         <assemblyIdentity name="CalcEngine" publicKeyToken="338adf0247ea9d68" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.8.40.40" newVersion="1.8.40.40" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Colosoft.Core" publicKeyToken="d3b3c440aed9b980" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
