--- a/Glass/GDA.config
+++ b/Glass/GDA.config
@@ -3,8 +3,8 @@
   <DefaultProvider name="WebGlass" />
   <Debug trace="true" />
   <ProvidersConfiguration>
-    <!--<Info name="WebGlass" providerName="MySql" connectionstring="Data Source=192.168.25.58;Initial Catalog=unividros_kenner;UId=desenv;Pwd=glass$ync;Min Pool Size=5;Max Pool Size=60;Connect Timeout=60;Allow User Variables=True" />-->
-    <Info name="WebGlass" providerName="MySql" connectionstring="Data Source=192.168.25.66;Initial Catalog=vidrotech_tuesday ;UId=root;Pwd=Glass$ync0;Min Pool Size=5;Max Pool Size=60;Connect Timeout=60;Allow User Variables=True" />
+    <Info name="WebGlass" providerName="MySql" connectionstring="Data Source=192.168.25.58;Initial Catalog=unividros_kenner;UId=desenv;Pwd=glass$ync;Min Pool Size=5;Max Pool Size=60;Connect Timeout=60;Allow User Variables=True" />
+    <!--<Info name="WebGlass" providerName="MySql" connectionstring="Data Source=192.168.25.66;Initial Catalog=vidrotech_tuesday ;UId=root;Pwd=Glass$ync0;Min Pool Size=5;Max Pool Size=60;Connect Timeout=60;Allow User Variables=True" />-->
   </ProvidersConfiguration>
   <Providers>
     <Provider name="MySql" classNamespace="GDA.Provider.MySql" assembly="GDA.Provider.MySql" />
