--- a/Glass/AppSettings.config
+++ b/Glass/AppSettings.config
@@ -13,5 +13,5 @@
   <add key="CapptaAuthKey" value="795180024C04479982560F61B3C2C06E" />
   <add key="TempoTimeOut" value="20" />
   <!--<add key="CapptaAuthKey" value="DB47AAA763E74032A771C35FA88277F8" /> produção -->
-  <add key="backendUrl" value="http://localhost:50879" />
+  <add key="backendUrl" value="/backend" />
 </appSettings>
