--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ bld/
 
 # Visual Studio 2015 cache/options directory
 .vs/
+!.vs/config/applicationhost.config
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
