--- a/WebGlass.Business/WebGlass.Business.csproj
+++ b/WebGlass.Business/WebGlass.Business.csproj
@@ -304,6 +304,7 @@
     <Compile Include="NaturezaOperacao\Fluxo\CRUD.cs" />
     <Compile Include="NotaFiscal\Ajax\Gerar.cs" />
     <Compile Include="NotaFiscal\Entidade\PagtoNotaFiscal.cs" />
+    <Compile Include="NotaFiscal\Entidade\ParcelaNf.cs" />
     <Compile Include="NotaFiscal\Fluxo\Gerar.cs" />
     <Compile Include="Obra\Ajax\DadosObra.cs" />
     <Compile Include="Obra\Fluxo\DadosObra.cs" />
