--- a/Glass/Mef.config
+++ b/Glass/Mef.config
@@ -542,6 +542,13 @@
       </exports>
     </part>
 
+    <part type="Glass.Otimizacao.Negocios.Componentes.ProvedorPlanoCorte, Glass.Negocios.Componentes">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractType="Glass.Otimizacao.Negocios.Entidades.IProvedorPlanoCorte, Glass.Negocios.Entidades" />
+      </exports>
+    </part>
+
     <part type="Glass.Otimizacao.Negocios.Componentes.AutenticadorProtocolo, Glass.Negocios.Componentes" partCreationPolicy="Shared">
       <importingConstructor useFirst="false" />
       <exports>
