--- a/Api/Glass.API.Backend/Web.config
+++ b/Api/Glass.API.Backend/Web.config
@@ -10,12 +10,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
-    <authentication mode="Forms">
-      <forms loginUrl="~/WebGlass/Default.aspx" name=".ASPXFORMSAUTH" timeout="30" cookieless="UseCookies" enableCrossAppRedirects="true" requireSSL="false" />
-    </authentication>
-    <machineKey validation="AES" validationKey="18b85f9e614055de62f7d5fb9ced952e9680231e622afdf7" decryptionKey="def78c5aaceb3a58f54b817deece5abf144ba4705d689fff" />
   </system.web>
-
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -106,11 +101,12 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-<system.webServer>
+  <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  </system.webServer></configuration>
+  </system.webServer>
+</configuration>
