Ajuste no web.config

--- a/Glass/Web.config
+++ b/Glass/Web.config
@@ -55,7 +55,7 @@
       </buildProviders>-->
     </compilation>
     <authentication mode="Forms">
-      <forms loginUrl="~/WebGlass/Default.aspx" name=".ASPXFORMSAUTH" timeout="30" cookieless="UseCookies" enableCrossAppRedirects="true" requireSSL="false" />
+      <forms loginUrl="~/WebGlass/default.aspx" name="login" />
     </authentication>
     <customErrors mode="Off" />
   </system.web>
