#77191 Adequações no WebGlass para a integração com eCutter

--- a/Glass/Web.config
+++ b/Glass/Web.config
@@ -10,6 +10,7 @@
 <configuration>
   <appSettings file="AppSettings.config">
     <add key="VueJsPath" value="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" />
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
   </appSettings>
   <connectionStrings />
   <!--
