#546 Inclusão do pacote Nuget para o EditorConfig, para tentar padronizar os estilos dos arquivos de código sem precisar da extensão instalada para o VS

--- a/Api/Glass.API.Backend/packages.config
+++ b/Api/Glass.API.Backend/packages.config
@@ -23,6 +23,7 @@
   <package id="Colosoft.Validation" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.Web" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.Web.Http" version="1.0.0" targetFramework="net461" />
+  <package id="editorconfig" version="0.12.1" targetFramework="net461" />
   <package id="GDA.Provider.MySql" version="1.0.4.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net461" />
