--- a/Financeiro/UI/Web/Glass.Financeiro.UI.Web.Process/Glass.Financeiro.UI.Web.Process.csproj
+++ b/Financeiro/UI/Web/Glass.Financeiro.UI.Web.Process/Glass.Financeiro.UI.Web.Process.csproj
@@ -65,6 +65,10 @@
       <HintPath>..\..\..\..\packages\Colosoft.Web.1.0.0\lib\net40\Colosoft.Web.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="EditorConfig.Core, Version=0.0.0.0, Culture=neutral, PublicKeyToken=fe6ce3ea283749f2, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\editorconfig.0.12.1\lib\net45\EditorConfig.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="GDA, Version=1.4.5.14925, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Colosoft.GDA.1.4.5.14925\lib\net35\GDA.dll</HintPath>
       <Private>True</Private>
