--- a/Glass.Data/packages.config
+++ b/Glass.Data/packages.config
@@ -21,6 +21,7 @@
   <package id="Colosoft.Text" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.Validation" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.WebControls" version="1.0.0" targetFramework="net461" />
+  <package id="editorconfig" version="0.12.1" targetFramework="net461" />
   <package id="Magick.NET-Q16-AnyCPU" version="7.0.3.902" targetFramework="net461" />
   <package id="MySql.Data" version="6.9.11" targetFramework="net461" />
   <package id="MySqlBackup.NET" version="2.0.9.5" targetFramework="net461" />
