--- a/Mathematical/Glass.Mathematical.Test/packages.config
+++ b/Mathematical/Glass.Mathematical.Test/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Colosoft.CommonServiceLocator" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.Core" version="1.0.0.272" targetFramework="net461" />
+  <package id="editorconfig" version="0.12.1" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.1.0-beta007" targetFramework="net461" developmentDependency="true" />
 </packages>
