--- a/Api/Glass.Api.Host/packages.config
+++ b/Api/Glass.Api.Host/packages.config
@@ -34,6 +34,7 @@
   <package id="Colosoft.Web" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.Web.Http" version="1.0.0" targetFramework="net461" />
   <package id="DotNetZip" version="1.10.1" targetFramework="net461" />
+  <package id="editorconfig" version="0.12.1" targetFramework="net461" />
   <package id="GDA.Provider.MySql" version="1.0.4.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
