--- a/Financeiro/UI/Web/Glass.Financeiro.UI.Web.Process/packages.config
+++ b/Financeiro/UI/Web/Glass.Financeiro.UI.Web.Process/packages.config
@@ -9,6 +9,7 @@
   <package id="Colosoft.Text" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.Validation" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.Web" version="1.0.0" targetFramework="net461" />
+  <package id="editorconfig" version="0.12.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="PDFsharp" version="1.32.3057.0" targetFramework="net461" />
   <package id="Select.HtmlToPdf" version="17.1.0" targetFramework="net461" />
