--- a/Glass.Data.Test/packages.config
+++ b/Glass.Data.Test/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
+  <package id="editorconfig" version="0.12.1" targetFramework="net461" />
   <package id="Moq" version="4.8.2" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.1.0-beta007" targetFramework="net461" developmentDependency="true" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
