--- a/Glass/packages.config
+++ b/Glass/packages.config
@@ -38,6 +38,7 @@
   <package id="Colosoft.WebControls" version="1.0.0" targetFramework="net461" />
   <package id="Common.Logging" version="3.0.0" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.0.0" targetFramework="net461" />
+  <package id="editorconfig" version="0.12.1" targetFramework="net461" />
   <package id="GDA.Provider.MySql" version="1.0.4.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
