--- a/Negocios/Glass.Negocios.Componentes/packages.config
+++ b/Negocios/Glass.Negocios.Componentes/packages.config
@@ -23,6 +23,7 @@
   <package id="Colosoft.Query" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.Text" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.Validation" version="1.0.0" targetFramework="net461" />
+  <package id="editorconfig" version="0.12.1" targetFramework="net461" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
