--- a/Otimizacao/Glass.Otimizacao/packages.config
+++ b/Otimizacao/Glass.Otimizacao/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="editorconfig" version="0.12.1" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.1.0-beta007" targetFramework="net461" developmentDependency="true" />
 </packages>
