--- a/UI/Web/Glass.UI.Web.Process/packages.config
+++ b/UI/Web/Glass.UI.Web.Process/packages.config
@@ -22,6 +22,7 @@
   <package id="Colosoft.Validation" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.Web" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.WebControls" version="1.0.0" targetFramework="net461" />
+  <package id="editorconfig" version="0.12.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.1.0-beta007" targetFramework="net461" developmentDependency="true" />
