--- a/WebGlass.Business/packages.config
+++ b/WebGlass.Business/packages.config
@@ -8,6 +8,7 @@
   <package id="Colosoft.Query" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.Text" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.Validation" version="1.0.0" targetFramework="net461" />
+  <package id="editorconfig" version="0.12.1" targetFramework="net461" />
   <package id="NPOI" version="2.2.1" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.1.0-beta007" targetFramework="net461" developmentDependency="true" />
