#546 Alterações no DTO de endereço para inclusão do campo de complemento.
Inclui alteração no projeto de backend para que o XML da documentação também seja incluído no pacote de atualização da versão.

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -43,6 +43,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Glass.API.Backend.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Colosoft.Business, Version=1.0.0.0, Culture=neutral, PublicKeyToken=1cbafe03430999d4, processorArchitecture=MSIL">
