--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -1834,6 +1834,7 @@
       <Link>stylecop.json</Link>
     </AdditionalFiles>
     <Content Include="packages.config" />
+    <Content Include="Handlers\ArquivoCheques.ashx" />
     <None Include="job_scheduling_data_2_0.xsd">
       <SubType>Designer</SubType>
     </None>
