--- a/Glass/Mef.config
+++ b/Glass/Mef.config
@@ -17,6 +17,12 @@
         <export contractName="" contractType="Glass.Financeiro.Negocios.Entidades.IProvedorPlanoContas, Glass.Negocios.Entidades" member="" />
       </exports>
     </part>
+    <part type="Glass.Financeiro.Negocios.Componentes.ChequesFluxo, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <importingConstructor useFirst="false" />
+      <exports>
+        <export contractName="" contractType="Glass.Financeiro.Negocios.IChequesFluxo, Glass.Negocios" member="" />
+      </exports>
+    </part>
     <part type="Glass.Instalacao.Negocios.Componentes.InstalacaoFluxo, Glass.Negocios.Componentes" partCreationPolicy="Shared">
       <importingConstructor useFirst="false" />
       <exports>
@@ -475,7 +481,7 @@
     <part type="Glass.Pedido.Negocios.Componentes.CalculadoraRentabilidadePedido, Glass.Negocios.Componentes" partCreationPolicy="Shared">
       <importingConstructor useFirst="true" />
       <exports>
-        <export contractName="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade(Glass.Data.Model.Pedido)" 
+        <export contractName="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade(Glass.Data.Model.Pedido)"
                 contractType="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade`1[Glass.Data.Model.Pedido, Glass.Data], Glass.Negocios" />
         <export contractName="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade(Glass.Data.Model.ProdutosPedido)"
                 contractType="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade`1[Glass.Data.Model.ProdutosPedido, Glass.Data], Glass.Negocios" />
@@ -529,13 +535,13 @@
                 contractType="Glass.Data.IVerificadorRentabilidadeLiberacao`1[Glass.Data.Model.Pedido, Glass.Data], Glass.Data" />
       </exports>
     </part>
-    
+
     <part type="Glass.Rentabilidade.Negocios.Componentes.VerificadorRentabilidadeLiberacao, Glass.Negocios.Componentes">
       <exports>
         <export contractType="Glass.Rentabilidade.Negocios.IVerificadorRentabilidadeLiberacao, Glass.Negocios" />
       </exports>
     </part>
-      
+
     <part type="Glass.Otimizacao.Negocios.Componentes.OtimizacaoFluxo, Glass.Negocios.Componentes">
       <exports>
         <export contractType="Glass.Otimizacao.Negocios.IOtimizacaoFluxo, Glass.Negocios" />
@@ -555,13 +561,13 @@
         <export contractType="Glass.Otimizacao.eCutter.IAutenticadorProtocolo, Glass.Otimizacao" />
       </exports>
     </part>
-    
+
     <part type="Glass.Fiscal.Negocios.Componentes.LocalizadorNaturezaOperacao, Glass.Negocios.Componentes" partCreationPolicy="Shared">
       <exports>
         <export contractType="Glass.Fiscal.Negocios.ILocalizadorNaturezaOperacao, Glass.Negocios" />
       </exports>
     </part>
-    
+
     <part type="Glass.Fiscal.Negocios.Componentes.ProvedorIcmsProdutoUf, Glass.Negocios.Componentes" partCreationPolicy="Shared">
       <exports>
         <export contractType="Glass.Fiscal.Negocios.Entidades.IProvedorIcmsProdutoUf, Glass.Negocios.Entidades" />
@@ -579,18 +585,18 @@
         <export contractType="Glass.Fiscal.Negocios.IProvedorCodValorFiscal, Glass.Negocios" />
       </exports>
     </part>
-    
+
     <part type="Glass.Fiscal.Negocios.Componentes.CalculadoraImposto, Glass.Negocios.Componentes" partCreationPolicy="NonShared">
       <importingConstructor useFirst="true" />
       <exports>
         <export contractType="Glass.Fiscal.Negocios.ICalculadoraImposto, Glass.Negocios" />
       </exports>
     </part>
-    
+
     <part type="Glass.Fiscal.Negocios.Componentes.Calculadoras.CalculadoraImpostoPedido, Glass.Negocios.Componentes" partCreationPolicy="NonShared">
       <importingConstructor useFirst="true" />
       <exports>
-        <export contractName="Glass.Data.ICalculadoraImposto(Glass.Data.Model.Pedido)" 
+        <export contractName="Glass.Data.ICalculadoraImposto(Glass.Data.Model.Pedido)"
                 contractType="Glass.Data.ICalculadoraImposto`1[Glass.Data.Model.Pedido, Glass.Data], Glass.Data" />
       </exports>
     </part>
