--- a/Negocios/Glass.Negocios.Entidades/Glass.Negocios.Entidades.csproj
+++ b/Negocios/Glass.Negocios.Entidades/Glass.Negocios.Entidades.csproj
@@ -114,6 +114,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Financeiro\Cheques\Arquivo.cs" />
+    <Compile Include="Financeiro\Cheques\Item.cs" />
     <Compile Include="Fiscal\IProvedorIcmsProdutoUf.cs" />
     <Compile Include="Fiscal\IProvedorMvaProdutoUf.cs" />
     <Compile Include="Otimizacao\EstoqueChapaEntrada.cs" />
