--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -1638,6 +1638,7 @@
     <Content Include="Vue\Pedidos\Templates\CadPedido.Ambientes.html" />
     <Content Include="Vue\Pedidos\Templates\CadPedido.Produtos.html" />
     <Content Include="Vue\Pedidos\Templates\LstPedidos.Filtro.html" />
+    <Content Include="Vue\Processos\Componentes\LstProcessos.js" />
     <Content Include="Vue\_Compartilhado\Componentes\Base\CampoBeneficiamentoBisote.js" />
     <Content Include="Vue\_Compartilhado\Componentes\Base\CampoBeneficiamentoLapidacao.js" />
     <Content Include="Vue\_Compartilhado\Componentes\Base\CampoBeneficiamentoListaSelecao.js" />
