--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -1624,6 +1624,9 @@
     <Content Include="Vue\ContasReceber\Componentes\LstContasRecebidas.Filtro.js" />
     <Content Include="Vue\ContasReceber\Componentes\LstContasRecebidas.js" />
     <Content Include="Vue\ContasReceber\Templates\LstContasRecebidas.Filtro.html" />
+    <Content Include="Vue\Estoques\Componentes\LstEstoques.Filtro.js" />
+    <Content Include="Vue\Estoques\Componentes\LstEstoques.js" />
+    <Content Include="Vue\Estoques\Templates\LstEstoques.Filtro.html" />
     <Content Include="Vue\PedidosConferencia\Componentes\LstPedidosConferencia.Filtro.js" />
     <Content Include="Vue\PedidosConferencia\Componentes\LstPedidosConferencia.js" />
     <Content Include="Vue\PedidosConferencia\Templates\LstPedidosConferencia.Filtro.html" />
@@ -1704,10 +1707,14 @@
     <Content Include="Vue\_Compartilhado\Mixins\Patch.js" />
     <Content Include="Vue\_Compartilhado\Mixins\Uuid.js" />
     <Content Include="Vue\_Compartilhado\Mixins\Validacao.js" />
+    <Content Include="Vue\_Compartilhado\Servicos\CoresFerragem.js" />
+    <Content Include="Vue\_Compartilhado\Servicos\CoresAluminio.js" />
+    <Content Include="Vue\_Compartilhado\Servicos\CoresVidro.js" />
     <Content Include="Vue\_Compartilhado\Servicos\DescontoPorQuantidade.js" />
     <Content Include="Vue\_Compartilhado\Servicos\Comissionados.js" />
     <Content Include="Vue\_Compartilhado\Servicos\Cfops.js" />
     <Content Include="Vue\_Compartilhado\Servicos\ContasReceber.js" />
+    <Content Include="Vue\_Compartilhado\Servicos\Estoques.js" />
     <Content Include="Vue\_Compartilhado\Servicos\NotasFiscais.js" />
     <Content Include="Vue\_Compartilhado\Servicos\Liberacoes.js" />
     <Content Include="Vue\_Compartilhado\Servicos\PedidosConferencia.js" />
